# BaconBoxApp-OLD

./: .gitignore  .hgignore  CMakeLists.txt  README  README.markdown  configure  readme.txt
application/: Loader.cpp  Loader.h  main.cpp
ide/QtCreator/: BaconBoxApp.pro  RedBoxApp.pro
ide/QtCreator/QtCreator_specific/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  redboxwidget.cpp  redboxwidget.h
ide/QtCreator/RedBoxApp/: RedBoxApp.pro  main.cpp  mainwindow.cpp  mainwindow.h  redboxwidget.cpp  redboxwidget.h
ide/codeblocks-linux/: BaconBoxApp.cbp  RedBoxApp.cbp
ide/codeblocks-windows/: RedBoxApp.cbp
ide/ios/BaconBoxApp.xcodeproj/: project.pbxproj
ide/ios/RedBoxApp.xcodeproj/: project.pbxproj
ide/ios/xcode_specific/en.lproj/: MainWindow.xib  RedBoxAppViewController.xib
ide/ios/xcode_specific/iPad/en.lproj/: MainWindow-iPad.xib
ide/osx/BaconBoxApp/BaconBoxApp/: AppDelegate.h  AppDelegate.m  BaconBoxApp-Info.plist  BaconBoxApp.1
ide/osx/BaconBoxApp/BaconBoxApp.xcodeproj/: project.pbxproj
ide/osx/BaconBoxApp/BaconBoxApp/en.lproj/: MainMenu.xib
ide/xcode/RedBoxApp.xcodeproj/: project.pbxproj
ide/xcode/xcode_specific/: EAGLView.m  RedBoxApp-Info.plist  RedBoxAppAppDelegate.m  RedBoxAppViewController.m
libraries/: baconbox.desc  libraries.desc  redbox.desc  sigly.desc
platform/SDL/: SDLMainWindow.cpp  SDLMainWindow.h  main.cpp
platform/ios/: RedBoxApp-Info.plist
script/: make_release.sh
script/CMake/configureScript/: configure-current
script/CMake/parts/: QT.cmake  SDL.cmake  iphone.cmake
script/Windows/: compile-windows.sh  configure-windows.sh
